# git-panorama

./: .gitignore  README.md  config.yaml.sample  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yml  deploy-dashboard.yml  deploy-gh-pages.yml  quick-check.yml
config/elasticsearch/: elasticsearch.keystore  elasticsearch.yml
config/grafana/: grafana.ini
config/grafana/provisioning/dashboards/: contribution-calendar-dynamic.html  dashboards.yml  repository-overview.json
config/grafana/provisioning/datasources/: all.yml
scripts/: analyze_git_commits.py  clear-cache.sh  clear-grafana-cache.sh  clone-repositories.sh  export-grafana-dashboard.py  find_unmapped_emails.py  read-config.py  setup-elasticsearch-indices.sh  test-cache.sh  update-all-stats.sh  upload-to-elasticsearch.sh  validate-dashboard.sh  wipe-and-create-elasticsearch-index-for-commits.sh
