[project]
name = "gitstats"
version = "1.0.0"
description = "Track team contributions and repository activity across multiple git repositories with Grafana dashboards"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
]

[project.scripts]
analyze-commits = "scripts.analyze_git_commits:main"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["T201"]  # Allow print statements in scripts

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

